--- a/login/index.html
+++ b/login/index.html
@@ -14,15 +14,18 @@
       import { initializeApp } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-app.js";
       import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-analytics.js";
       import {
+        getFirestore,
+        collection,
+        query,
+        where,
+        doc,
+        updateDoc,
+        getDocs,
+      } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-firestore.js";
+      import {
         getAuth,
         signInWithEmailAndPassword,
       } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-auth.js";
-      import {
-        getDatabase,
-        set,
-        ref,
-        update,
-      } from "https://www.gstatic.com/firebasejs/9.8.2/firebase-database.js";
       // TODO: Add SDKs for Firebase products that you want to use
       // https://firebase.google.com/docs/web/setup#available-libraries
 
@@ -42,31 +45,27 @@
       const app = initializeApp(firebaseConfig);
       const analytics = getAnalytics(app);
       const auth = getAuth();
-      const database = getDatabase(app);
+      const database = getFirestore(app);
 
       const loginButton = document.getElementById("loginButton");
-      loginButton.addEventListener("click", (e) => {
+      loginButton.addEventListener("click", async (e) => {
         let email = document.getElementById("emailInput").value;
         let password = document.getElementById("passwordInput").value;
 
-
-        signInWithEmailAndPassword(auth, email, password)
-          .then((userCredential) => {
+        await signInWithEmailAndPassword(auth, email, password)
+          .then(async (userCredential) => {
             // Signed in
             const user = userCredential.user;
+            const lastLoggedIn = new Date();
+
+            const userRef = doc(database, "users", user.uid);
+            await updateDoc(userRef, {
+              lastLoggedIn: lastLoggedIn,
+            });
+            const homePage = document.createElement("a");
+            homePage.setAttribute("href", "../homepage/home.html");
+            homePage.click();
             // ...
-            let lgDate = new Date();
-            update(ref(database, "users/" + user.uid), {
-              last_login: lgDate,
-            })
-              .then(() => {
-                // Data saved successfully!
-                alert("User logged in successfully!");
-              })
-              .catch((error) => {
-                // The write failed...
-                alert(error);
-              });
           })
           .catch((error) => {
             const errorCode = error.code;
