worked on goals page

--- a/src/homepage/home.html
+++ b/src/homepage/home.html
@@ -10,20 +10,18 @@
   <body>
     <div class="navBar">
       <a class="active" href="home.html">Home</a>
-      <a href="">About</a>
-      <a href="">Projects</a>
-      <a href="">Goals</a>
-      <a href="">Services</a>
-      <a href="">Contact</a>
+      <a href="../projectPage/project.html">Projects</a>
+      <a href="../goalsPage/goals.html">Goals</a>
+      <a href="../servicesPage/services.html">Services</a>
+      <a href="../contactPage/contact.html">Contact</a>
       <h1 id="logo">TNT Group</h1>
     </div>
     <div>
       <img
         id="img"
-        src="https://images.unsplash.com/photo-1556156653-e5a7c69cc263?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1471&q=80"
+        src="https://images.unsplash.com/photo-1606744824163-985d376605aa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1932&q=80"
       />
-    </div>
-    <div class="who">
+
       <h1 id="header">T&T Group Construction</h1>
       <p id="ourCompany">
         Generating random paragraphs can be an excellent way for writers to get
@@ -57,9 +55,9 @@
     <div id="thirdPart">
       <p id="contactInfo">Contact Information</p>
       <div id="contact">
-        <a>Email: huumaa@yahoo.com</a>
-        <a>Phone number: 425-770-7900</a>
-        <a>Facebook:</a>
+        <a href="mailto:ttgroupllc@yahoo.com">Email: ttgroupllc@yahoo.com</a>
+        <a href="tel:4257707900">Phone number: 425-770-7900</a>
+        <a href="https://www.facebook.com/tntgroupllc">Facebook: T&T Group</a>
       </div>
     </div>
     <script src="home.js"></script>
