--- a/src/goalsPage/goals.html
+++ b/src/goalsPage/goals.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Goals Page</title>
+    <title>Goals</title>
     <link rel="stylesheet" href="goals.css" />
   </head>
   <body>
@@ -18,10 +18,57 @@
     </div>
     <div id="border">
       <h1 id="header">Our Goals</h1>
-        <p>Recognize</p>
-        <p>Establish</p>
-        <p>Strive</p>
-        <p>Fulfill</p>
+      <div id="goals">
+        <span id="recognize">Recognize</span>
+        <span id="establish">Establish</span>
+        <span id="strive">Strive</span>
+        <span id="fulfill">Fulfill</span>
+      </div>
+    </div>
+    <div id="rightSide">
+      <p id="header">Recognize needs</p>
+      <p id="recognize1">
+        If you're looking for random paragraphs, you've come to the right place.
+        When a random word or a random sentence isn't quite enough, the next
+        logical step is to find a random paragraph. We created the Random
+        Paragraph Generator with you in mind. The process is quite simple.
+        Choose the number of random paragraphs you'd like to see and click the
+        button. Your chosen number of paragraphs will instantly appear.
+      </p>
+    </div>
+
+    <div id="rightSide2">
+      <p id="header">Establish</p>
+      <p id="establish1">
+        If you're looking for random paragraphs, you've come to the right place.
+        When a random word or a random sentence isn't quite enough, the next
+        logical step is to find a random paragraph. We created the Random
+        Paragraph Generator with you in mind. The process is quite simple.
+        Choose the number of random paragraphs you'd like to see and click the
+        button. Your chosen number of paragraphs will instantly appear.
+      </p>
+    </div>
+    <div id="rightSide3">
+      <p id="header">Strive</p>
+      <p id="strive1">
+        If you're looking for random paragraphs, you've come to the right place.
+        When a random word or a random sentence isn't quite enough, the next
+        logical step is to find a random paragraph. We created the Random
+        Paragraph Generator with you in mind. The process is quite simple.
+        Choose the number of random paragraphs you'd like to see and click the
+        button. Your chosen number of paragraphs will instantly appear.
+      </p>
+    </div>
+    <div id="rightSide4">
+      <p id="header">Fulfill</p>
+      <p id="fulfill1">
+        If you're looking for random paragraphs, you've come to the right place.
+        When a random word or a random sentence isn't quite enough, the next
+        logical step is to find a random paragraph. We created the Random
+        Paragraph Generator with you in mind. The process is quite simple.
+        Choose the number of random paragraphs you'd like to see and click the
+        button. Your chosen number of paragraphs will instantly appear.
+      </p>
     </div>
     <script src="goals.js"></script>
   </body>
