--- a/src/projectPage/project.html
+++ b/src/projectPage/project.html
@@ -19,6 +19,7 @@
     <div>
       <p id="contactInfo">Projects</p>
     </div>
+    <p style="padding-top: 1800px;">Hi</p>
     <script src="project.js"></script>
   </body>
 </html>
