--- a/src/servicesPage/services.html
+++ b/src/servicesPage/services.html
@@ -17,12 +17,47 @@
       <h1 id="logo">TNT Group</h1>
     </div>
     <div>
-        <p id="contactInfo">Services</p>
-        <div id="serviceTypes">
-            <p>Remodeling</p>
-            <p>Commercial</p>
-            <p>Custom Homes</p>
-        </div>
+      <p id="contactInfo">Services</p>
+      <div id="images">
+        <img
+          id="commercialImg"
+          src="https://images.unsplash.com/photo-1554995207-c18c203602cb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+        />
+        <img
+          id="remodelingImg"
+          src="https://images.unsplash.com/photo-1554995207-c18c203602cb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+        />
+        <img
+          id="customHomesImg"
+          src="https://images.unsplash.com/photo-1554995207-c18c203602cb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
+        />
+      </div>
+
+      <div id="serviceTypes">
+        <p id="remodeling">Remodeling</p>
+        <p id="commercial">Commercial</p>
+        <p id="customHomes">Custom Homes</p>
+      </div>
+      <div id="paragraphs">
+        <p>
+          Donec accumsan semper varius. Aliquam erat volutpat. Cras non feugiat
+          dolor, a lobortis ante. Nulla nec magna et ex porttitor fringilla in
+          vel nunc. Maecenas ultrices rhoncus purus, ut pellentesque augue
+          fringilla auctor. 
+        </p>
+        <p>
+          Donec accumsan semper varius. Aliquam erat volutpat. Cras non feugiat
+          dolor, a lobortis ante. Nulla nec magna et ex porttitor fringilla in
+          vel nunc. Maecenas ultrices rhoncus purus, ut pellentesque augue
+          fringilla auctor. 
+        </p>
+        <p>
+          Donec accumsan semper varius. Aliquam erat volutpat. Cras non feugiat
+          dolor, a lobortis ante. Nulla nec magna et ex porttitor fringilla in
+          vel nunc. Maecenas ultrices rhoncus purus, ut pellentesque augue
+          fringilla auctor. 
+        </p>
+      </div>
     </div>
     <script src="services.css"></script>
   </body>
