--- a/src/servicesPage/services.html
+++ b/src/servicesPage/services.html
@@ -18,45 +18,49 @@
     </div>
     <div>
       <p id="contactInfo">Services</p>
-      <div id="images">
-        <img
-          id="commercialImg"
-          src="https://images.unsplash.com/photo-1554995207-c18c203602cb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
-        />
-        <img
-          id="remodelingImg"
-          src="https://images.unsplash.com/photo-1554995207-c18c203602cb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
-        />
-        <img
-          id="customHomesImg"
-          src="https://images.unsplash.com/photo-1554995207-c18c203602cb?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80"
-        />
-      </div>
+      <div id="allInfo">
+        <div id="remodelingAll">
+          <img
+            id="img"
+            src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.6435-9/56786163_537704603299975_5411927653617762304_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=cdbe9c&_nc_ohc=_UQEINW5QHIAX_-ik0L&_nc_ht=scontent-sea1-1.xx&oh=00_AT-M4JqerT7eeRerwkyKfB1fJOWQLZMhr0l7Q-wOno3__A&oe=62C37B67"
+          />
 
-      <div id="serviceTypes">
-        <p id="remodeling">Remodeling</p>
-        <p id="commercial">Commercial</p>
-        <p id="customHomes">Custom Homes</p>
-      </div>
-      <div id="paragraphs">
-        <p>
-          Donec accumsan semper varius. Aliquam erat volutpat. Cras non feugiat
-          dolor, a lobortis ante. Nulla nec magna et ex porttitor fringilla in
-          vel nunc. Maecenas ultrices rhoncus purus, ut pellentesque augue
-          fringilla auctor. 
-        </p>
-        <p>
-          Donec accumsan semper varius. Aliquam erat volutpat. Cras non feugiat
-          dolor, a lobortis ante. Nulla nec magna et ex porttitor fringilla in
-          vel nunc. Maecenas ultrices rhoncus purus, ut pellentesque augue
-          fringilla auctor. 
-        </p>
-        <p>
-          Donec accumsan semper varius. Aliquam erat volutpat. Cras non feugiat
-          dolor, a lobortis ante. Nulla nec magna et ex porttitor fringilla in
-          vel nunc. Maecenas ultrices rhoncus purus, ut pellentesque augue
-          fringilla auctor. 
-        </p>
+          <p id="title">Remodeling</p>
+          <p id="paragraphs">
+            Donec accumsan semper varius. Aliquam erat volutpat. Cras non
+            feugiat dolor, a lobortis ante. Nulla nec magna et ex porttitor
+            fringilla in vel nunc. Maecenas ultrices rhoncus purus, ut
+            pellentesque augue fringilla auctor.
+          </p>
+        </div>
+        <div id="commercialAll">
+          <img
+            id="img"
+            src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.6435-9/56786163_537704603299975_5411927653617762304_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=cdbe9c&_nc_ohc=_UQEINW5QHIAX_-ik0L&_nc_ht=scontent-sea1-1.xx&oh=00_AT-M4JqerT7eeRerwkyKfB1fJOWQLZMhr0l7Q-wOno3__A&oe=62C37B67"
+          />
+
+          <p id="title">Commercial</p>
+          <p id="paragraphs">
+            Donec accumsan semper varius. Aliquam erat volutpat. Cras non
+            feugiat dolor, a lobortis ante. Nulla nec magna et ex porttitor
+            fringilla in vel nunc. Maecenas ultrices rhoncus purus, ut
+            pellentesque augue fringilla auctor.
+          </p>
+        </div>
+        <div id="customHomeAll">
+          <img
+            id="img"
+            src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.6435-9/56786163_537704603299975_5411927653617762304_n.jpg?_nc_cat=110&ccb=1-7&_nc_sid=cdbe9c&_nc_ohc=_UQEINW5QHIAX_-ik0L&_nc_ht=scontent-sea1-1.xx&oh=00_AT-M4JqerT7eeRerwkyKfB1fJOWQLZMhr0l7Q-wOno3__A&oe=62C37B67"
+          />
+
+          <p id="title">Custom Home</p>
+          <p id="paragraphs">
+            Donec accumsan semper varius. Aliquam erat volutpat. Cras non
+            feugiat dolor, a lobortis ante. Nulla nec magna et ex porttitor
+            fringilla in vel nunc. Maecenas ultrices rhoncus purus, ut
+            pellentesque augue fringilla auctor.
+          </p>
+        </div>
       </div>
     </div>
     <script src="services.css"></script>
