--- a/src/servicesPage/services.html
+++ b/src/servicesPage/services.html
@@ -17,7 +17,7 @@
       <h1 id="logo">TNT Group</h1>
     </div>
     <div>
-      <p id="contactInfo">Services</p>
+      <!-- <p id="contactInfo">Services</p> -->
       <div id="allInfo">
         <div id="remodelingAll">
           <img
