--- a/src/goalsPage/goals.html
+++ b/src/goalsPage/goals.html
@@ -8,68 +8,7 @@
     <link rel="stylesheet" href="goals.css" />
   </head>
   <body>
-    <div class="navBar">
-      <a href="../homepage/home.html">Home</a>
-      <a href="../projectPage/project.html">Projects</a>
-      <a class="active" href="goals.html">Goals</a>
-      <a href="../servicesPage/services.html">Services</a>
-      <a href="../contactPage/contact.html">Contact</a>
-      <h1 id="logo">TNT Group</h1>
-    </div>
-    <div id="border">
-      <h1 id="header">Our Goals</h1>
-      <div id="goals">
-        <span id="recognize">Recognize</span>
-        <span id="establish">Establish</span>
-        <span id="strive">Strive</span>
-        <span id="fulfill">Fulfill</span>
-      </div>
-    </div>
-    <div id="rightSide">
-      <p id="header">Recognize needs</p>
-      <p id="recognize1">
-        If you're looking for random paragraphs, you've come to the right place.
-        When a random word or a random sentence isn't quite enough, the next
-        logical step is to find a random paragraph. We created the Random
-        Paragraph Generator with you in mind. The process is quite simple.
-        Choose the number of random paragraphs you'd like to see and click the
-        button. Your chosen number of paragraphs will instantly appear.
-      </p>
-    </div>
-
-    <div id="rightSide2">
-      <p id="header">Establish</p>
-      <p id="establish1">
-        If you're looking for random paragraphs, you've come to the right place.
-        When a random word or a random sentence isn't quite enough, the next
-        logical step is to find a random paragraph. We created the Random
-        Paragraph Generator with you in mind. The process is quite simple.
-        Choose the number of random paragraphs you'd like to see and click the
-        button. Your chosen number of paragraphs will instantly appear.
-      </p>
-    </div>
-    <div id="rightSide3">
-      <p id="header">Strive</p>
-      <p id="strive1">
-        If you're looking for random paragraphs, you've come to the right place.
-        When a random word or a random sentence isn't quite enough, the next
-        logical step is to find a random paragraph. We created the Random
-        Paragraph Generator with you in mind. The process is quite simple.
-        Choose the number of random paragraphs you'd like to see and click the
-        button. Your chosen number of paragraphs will instantly appear.
-      </p>
-    </div>
-    <div id="rightSide4">
-      <p id="header">Fulfill</p>
-      <p id="fulfill1">
-        If you're looking for random paragraphs, you've come to the right place.
-        When a random word or a random sentence isn't quite enough, the next
-        logical step is to find a random paragraph. We created the Random
-        Paragraph Generator with you in mind. The process is quite simple.
-        Choose the number of random paragraphs you'd like to see and click the
-        button. Your chosen number of paragraphs will instantly appear.
-      </p>
-    </div>
+    <div id="box"></div>
     <script src="goals.js"></script>
   </body>
 </html>
