finishing up website

--- a/src/homepage/home.html
+++ b/src/homepage/home.html
@@ -41,13 +41,13 @@
             src="https://powerusers.microsoft.com/t5/image/serverpage/image-id/98171iCC9A58CAF1C9B5B9/image-size/large/is-moderation-mode/true?v=v2&px=999"
           />
           <p id="aboutPerson">
-            Tumenjargal is a smart, capable leader and a skilled
-            worker. He has been working in construction for 7+ years and is
-            hardworking and diligent. He is an excellent contracter and his work
-            is precise and excellent. He values the customers wants and needs
-            and makes sure they are satisfied with the results. At home,
-            Tumenjargal has 3 daughters and 1 son. He and his family live in
-            Redmond, WA and have lived in Washington for 8 years.
+            Tumenjargal is a proficient, capable leader and a skilled
+            contractor. He's been working in construction for 7+ years and is
+            hardworking and diligent. He is an excellent _______ and his work is
+            precise. He values the customers wants and needs and makes sure they
+            are satisfied with the results. At home, Tumenjargal has 3 daughters
+            and a son. He and his family live in Redmond, WA and have lived in
+            Washington for 8 years.
           </p>
           <!-- write about how Tumenjargal's team is hardworking and strive for excellence. maybe also about how long he's been working. -->
         </div>
@@ -61,6 +61,7 @@
         <a href="https://www.facebook.com/tntgroupllc">Facebook: T&T Group</a>
       </div>
     </div>
+
     <script src="home.js"></script>
   </body>
   <footer>
