project html to js

--- a/src/projectPage/project.html
+++ b/src/projectPage/project.html
@@ -8,126 +8,8 @@
     <link rel="stylesheet" href="project.css" />
   </head>
   <body>
-    <div class="navBar">
-      <a href="../homepage/home.html">Home</a>
-      <a class="active" href="project.html">Projects</a>
-      <a href="../goalsPage/goals.html">Goals</a>
-      <a href="../servicesPage/services.html">Services</a>
-      <a href="../contactPage/contact.html">Contact</a>
-      <h1 id="logo">TNT Group</h1>
-    </div>
-    <div>
-      <p id="contactInfo">House Remodeling</p>
-    </div>
-    <div class="slideshow-container">
-      <div class="mySlides3 fade">
-        <img
-          src="https://photos.zillowstatic.com/fp/789729a47703e3b65a9c0672b7311f8d-uncropped_scaled_within_1536_1152.webp"
-          id="images"
-        />
-        <div class="text">Before</div>
-      </div>
+    <div id="container"></div>
 
-      <div class="mySlides3 fade">
-        <img
-          src="https://photos.zillowstatic.com/fp/8a44dd1a27064b1ea976521423e0652a-uncropped_scaled_within_1536_1152.webp"
-          id="images"
-        />
-        <div class="text">After</div>
-      </div>
-
-      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlides(1)">&#10095;</a>
-    </div>
-    <br />
-
-    <div class="slideshow-container">
-      <div class="mySlides2 fade">
-        <img
-          src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.6435-9/56800823_537692923301143_8180135475772653568_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=cdbe9c&_nc_ohc=4cLVRqJdbWUAX-Gfya8&_nc_ht=scontent-sea1-1.xx&oh=00_AT97y57vhttLOjKvJWSyHtHwUNPKi0WyxQZ72yxJHFAZrQ&oe=62C25222"
-          id="images"
-        />
-        <div class="text">Before</div>
-      </div>
-
-      <div class="mySlides2 fade">
-        <img
-          src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.6435-9/57098921_537692959967806_5898982970823278592_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=cdbe9c&_nc_ohc=ZxOSOneo720AX98-HKZ&_nc_ht=scontent-sea1-1.xx&oh=00_AT_nCgTvA6tx3XUSMPnwL7SGmL9c9zmwntHcWZc_4uRGZg&oe=62C201CA"
-          id="images"
-        />
-        <div class="text">After</div>
-      </div>
-
-      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlides(1)">&#10095;</a>
-    </div>
-    <br />
-
-    <div class="slideshow-container">
-      <div class="mySlides fade">
-        <img
-          src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.6435-9/61867517_566278127109289_2866248164447354880_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=GznTDLJSVRcAX8EkBNq&tn=776H95RyHFaYhH4_&_nc_ht=scontent-sea1-1.xx&oh=00_AT9jC9FjLVTlpxN1tlgB5ovvA2hr1RXEr0viJpLWM3yadA&oe=62C3E918"
-          id="images"
-        />
-        <div class="text">Before</div>
-      </div>
-
-      <div class="mySlides fade">
-        <img
-          src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.6435-9/62049815_566278150442620_8919737945179553792_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=-l3N7DbyrdUAX9NXHhg&_nc_ht=scontent-sea1-1.xx&oh=00_AT9zbNvr-yTrcoxrpbVJfV7gi_6cZtNrE_UW8XPMl976og&oe=62C1D488"
-          id="images"
-        />
-        <div class="text">After</div>
-      </div>
-
-      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlides(1)">&#10095;</a>
-    </div>
-    <br />
-
-    <h1 id="contactInfo">House Paint Jobs</h1>
-    <div class="slideshow-container">
-      <div class="mySlides4 fade">
-        <img
-          src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.6435-9/60210113_552937081776727_7610769592830394368_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=v347qceHF_QAX8kf-nG&_nc_oc=AQn-OYb00veOU4mp7XUwBqPTXqjEPsVJoPzzpn8d-wm-3pInwg2maQA3gLpi3fv8mIg&_nc_ht=scontent-sea1-1.xx&oh=00_AT_nosfg_ai1KGB5vglQS-PHBmedMqCtcJTVFdd8iWuK2Q&oe=62C3B982"
-          id="images2"
-        />
-        <div class="text">Before</div>
-      </div>
-
-      <div class="mySlides4 fade">
-        <img
-          src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.6435-9/60384834_552937108443391_7664548866913468416_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=K4WZpuNIIycAX_GT8JS&tn=776H95RyHFaYhH4_&_nc_ht=scontent-sea1-1.xx&oh=00_AT897bW5XyibfyBOUJHDxcBGdQkaK60tYo1yD5VoxjRTWg&oe=62C4DF42"
-          id="images2"
-        />
-        <div class="text">After</div>
-      </div>
-
-      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlides(1)">&#10095;</a>
-    </div>
-    <br />
-    <div class="slideshow-container">
-      <div class="mySlides5 fade">
-        <img
-          src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.6435-9/71407474_634776703592764_7479352286586601472_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=l005Lf3UaGgAX_kwr9f&_nc_ht=scontent-sea1-1.xx&oh=00_AT8tgxznCMm-k_6jJjE_Mdx5OdIqO-EOHr8H2iLURJ1LxQ&oe=62C3FE2F"
-          id="images2"
-        />
-        <div class="text">Before</div>
-      </div>
-
-      <div class="mySlides5 fade">
-        <img
-          src="https://scontent-sea1-1.xx.fbcdn.net/v/t1.6435-9/71496945_634776716926096_4259412693435285504_n.jpg?_nc_cat=107&ccb=1-7&_nc_sid=8bfeb9&_nc_ohc=PjbbstYRKEoAX86siNs&_nc_ht=scontent-sea1-1.xx&oh=00_AT9AdmnDlWTrlqKqjIzGPiJ8OA2KJx5GErvZCmtK00Ha7Q&oe=62C4BB4D"
-          id="images2"
-        />
-        <div class="text">After</div>
-      </div>
-
-      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlides(1)">&#10095;</a>
-    </div>
-    <br />
     <script src="project.js"></script>
   </body>
 </html>
