--- a/src/homepage/home.html
+++ b/src/homepage/home.html
@@ -8,67 +8,8 @@
     <link rel="stylesheet" href="home.css" />
   </head>
   <body>
-    <div class="navBar">
-      <a class="active" href="home.html">Home</a>
-      <a href="../projectPage/project.html">Projects</a>
-      <a href="../goalsPage/goals.html">Goals</a>
-      <a href="../servicesPage/services.html">Services</a>
-      <a href="../contactPage/contact.html">Contact</a>
-      <h1 id="logo">TNT Group</h1>
-    </div>
-    <div>
-      <img
-        id="img"
-        src="https://images.unsplash.com/photo-1606744824163-985d376605aa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1932&q=80"
-      />
-
-      <h1 id="header">T&T Group Construction</h1>
-      <p id="ourCompany">
-        Generating random paragraphs can be an excellent way for writers to get
-        their creative flow going at the beginning of the day. The writer has no
-        idea what topic the random paragraph will be about when it appears. The
-        writer has no idea what topic the random paragraph will be about when it
-        appears.
-      </p>
-      <!-- Write about what the company values or what we do -->
-    </div>
-    <div id="secondPart">
-      <div>
-        <h1 id="ourTeam">Our Team</h1>
-        <div id="flex">
-          <img
-            id="person"
-            src="https://powerusers.microsoft.com/t5/image/serverpage/image-id/98171iCC9A58CAF1C9B5B9/image-size/large/is-moderation-mode/true?v=v2&px=999"
-          />
-          <p id="aboutPerson">
-            Tumenjargal is a proficient, capable leader and a skilled
-            contractor. He's been working in construction for 7+ years and is
-            hardworking and diligent. He is an excellent _______ and his work is
-            precise. He values the customers wants and needs and makes sure they
-            are satisfied with the results. At home, Tumenjargal has 3 daughters
-            and a son. He and his family live in Redmond, WA and have lived in
-            Washington for 8 years.
-          </p>
-          <!-- write about how Tumenjargal's team is hardworking and strive for excellence. maybe also about how long he's been working. -->
-        </div>
-      </div>
-    </div>
-    <div id="thirdPart">
-      <p id="contactInfo">Contact Information</p>
-      <div id="contact">
-        <a href="mailto:ttgroupllc@yahoo.com">Email: ttgroupllc@yahoo.com</a>
-        <a href="tel:4257707900">Phone number: 425-770-7900</a>
-        <a href="https://www.facebook.com/tntgroupllc">Facebook: T&T Group</a>
-      </div>
-    </div>
-
+    <div id="container"></div>
+    <footer id="footers"></footer>
     <script src="home.js"></script>
   </body>
-  <footer>
-    <div id="footer">
-      <p id="paragraph">
-        ©2022 by T&T Group Construction. Created by Odmaral Tumenjargal
-      </p>
-    </div>
-  </footer>
 </html>
